# CProgrammEntwurf

morse/: CMakeLists.txt  main.c
morse/include/: morse.h  morse_table.h
morse/src/: decode.c  encode.c  input.txt  main.c  morse.c  morse_table.c
